<resources>

    <string name="app_name">UUJ Diet Diary</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_diet__diary">Diet_Diary</string>
    <string-array name="input_types">
        <item >Meal</item>
        <item >Exercise</item>
    </string-array>
    <string name="Time">Time</string>
    <string name="Food">Food/Drink</string>
    <string name="Portion">Portion Size</string>
    <string name="Notes">Notes</string>
    <string name="Exercise">Exercise</string>
    <string name="Duration">Duration</string>
    <string name="Submit">Submit</string>
    <string name="Intensity">Intensity</string>
    <string name="Back">Back</string>
    <string name="Log">View Saved Data</string>
    <string name="Input">Log Meals or Exercise</string>
    <string name="Export">Export Data</string>
    <string name="Blank"> </string>
    <string name="Bluetooth">Send results using bluetooth</string>
    <string name="Email">Send results using email</string>
    <string name="Userdata">Input User Data</string>
   

</resources>