<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
     android:layout_weight="1"
   >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

        <TableRow
            android:id="@+id/tableRow6"
             android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnInput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/Input" />
        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnLog"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/Log" />
        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUserData"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/Userdata" />

        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnBluetooth"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/Bluetooth" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/Email" />

        </TableRow>

    </TableRow>

</TableLayout>